test/conformance/chainsaw/mutate/e2e/foreach-patchStrategicMerge-preconditions/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: nginx
    image: nginx:1.14.2
